# STSAFE-A_OpenSSL_Engine

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  OEToolchainConfig.cmake  README.md  STSW-STSA110-SSL_Release_Notes.html  STSW-STSA110-SSL_Release_Notes.md  alias.conf  bootstrap  configure.ac  make.inc
Documentation/: Release_note.txt
Examples/: CMakeLists.txt
Examples/iot_openssl_test/: iot_network_openssl.c
Examples/stsafe_engine_test_suite/: CMakeLists.txt  Device-Cert.pem  Makefile  alias.conf  ecdh_test.c  ecdsa_sign_verify.c  pkey_test.c  query_test.c  rand_test.c  test_stsafe_engine.c  test_stsafe_engine.h
Examples/stsafe_engine_test_suite/inc/: test_stsafe_engine.h
Examples/stsafe_genkey/: CMakeLists.txt  Makefile
Examples/stsafe_genkey/src/: dependsfile.d  openssl.conf.stsafe  stsafe_genkey.c
inc/: ec_local.h  engine_debug.h  refcount.h  stsafe_a_configuration.h  stsafe_api.h  stsafe_init.h  stsafea_conf.h  stsafea_interface_conf.h
lib/STSAFE_Axx0/: CMakeLists.txt  LICENSE.txt  Release_Notes.html  STSAFE-A1xx_Middleware.chm  STSAFE-A_Release_Notes.md
lib/STSAFE_Axx0/CoreModules/Inc/: stsafea100.h  stsafea110.h  stsafea_core.h  stsafea_crypto.h  stsafea_service.h  stsafea_types.h  stsafeaxxx.h
lib/STSAFE_Axx0/CoreModules/Src/: stsafea_core.c  stsafea_crypto.c  stsafea_service.c
lib/STSAFE_Axx0/Interface/: stsafea_conf_template.h  stsafea_crypto_interface_template.c  stsafea_crypto_mbedtls_interface_template.c  stsafea_crypto_stlib_interface_template.c  stsafea_interface_conf_template.h  stsafea_service_interface_template.c
src/: engine_init.c  stsafe_cipher.c  stsafe_cmd.c  stsafe_configuration.c  stsafe_ecdsa.c  stsafe_init.c  stsafe_pem_priv.c  stsafe_pkey_meth.c  stsafe_rand.c  stsafe_zone.c  stsafea_crypto_openssl_interface_engine.c  stsafea_service_interface_engine.c
